--- a/src/main/resources/ConvertKitApplication.fxml
+++ b/src/main/resources/ConvertKitApplication.fxml
@@ -81,6 +81,7 @@
                                           </Separator>
                                           <Label text="轉換" />
                                           <ComboBox fx:id="conversionComboBox" prefWidth="150.0" />
+                                          <Button fx:id="applyConversionButton" mnemonicParsing="false" text="套用" />
                                        </children>
                                        <padding>
                                           <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
